--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,14 +76,19 @@ add_custom_target(
 set(CMAKE_C_STANDARD 99)
 add_subdirectory(vendors/librequests)
 
-include_directories(include)
+target_include_directories(librequests
+        PUBLIC
+        $<INSTALL_INTERFACE:include>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 add_executable(${PROJECT_NAME}
         ${CMAKE_CURRENT_BINARY_DIR}/${GRESOURCE_C}
-        src/main.c include/clashgapp.h src/clashgapp.c src/clashgappwin.c include/clashgappwin.h
-        src/clashgappprefs.c include/clashgappprefs.h)
+        src/main.c include/app.h src/app.c include/window.h src/window.c
+        include/prefs.h src/prefs.c src/rule_page.c include/rule_page.h)
 
-target_link_libraries(${PROJECT_NAME} librequests ${ADW_LIBRARIES} ${GTK4_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} librequests ${GTK4_LIBRARIES} ${ADW_LIBRARIES})
 
 set_source_files_properties(
         ${CMAKE_CURRENT_BINARY_DIR}/${GRESOURCE_C}
